# robotican

./: .gitignore  CMakeLists.txt  package.xml
ric_board/: CMakeLists.txt  (+1 more)
robotican/: CMakeLists.txt  package.xml
robotican/installations/: MetaPackage_Installation.sh  install.sh  metapackage_installation.sh
robotican/installations/robot_pkg_setup/: setup.bash
robotican/installations/third_pkg_setup/: check_ssh.sh  f200.sh  kinect2.sh  setup.sh
robotican/installations/usb_rules_setup/: hokuyo.rules  setup.sh
robotican_gui/: CMakeLists.txt  README  mainpage.dox  package.xml
robotican_gui/config/: robotican_gui.yaml
robotican_gui/include/: robotican_gui.h
robotican_gui/launch/: robotican_gui.launch
robotican_gui/resources/images/: image_resource_file.qrc
robotican_gui/resources/ui/: robotican_gui.ui
robotican_gui/src/: main.cpp
robotican_gui/src/event_handler/: EventSignal.cpp  EventSignal.h  EventSlot.cpp  EventSlot.h
robotican_gui/src/gui_components/: Led.cpp  Led.h
robotican_gui/src/gui_manager/: GUIManager.cpp  GUIManager.h
robotican_gui/src/listeners/: Arm.cpp  Arm.h  Battery.cpp  Battery.h  F200.cpp  F200.h  FrontCam.cpp  FrontCam.h  Gps.cpp  Gps.h  Gripper.cpp  Gripper.h  Imu.cpp  Imu.h  Kinect2.cpp  Kinect2.h  Lidar.cpp  Lidar.h  Listener.h  Odom.cpp  Odom.h  PanTilt.cpp  PanTilt.h  RearCam.cpp  RearCam.h  UrfLeft.cpp  UrfLeft.h  UrfRear.cpp  UrfRear.h  UrfRight.cpp  UrfRight.h
robotican_hardware/ric_mc/: CMakeLists.txt  package.xml  ros_lib_make_libraries.sh
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/: CmdMessenger.cpp  README.markdown
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/: CmdMessenger.sln  CmdMessenger.userprefs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/ArduinoController/: ArduinoController.cs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/CommandMessenger/: BinaryConverter.cs  CmdMessenger.cs  Command.cs  CommandMessenger.csproj  CommunicationManager.cs  NewLineEvent.cs  ReceivedCommand.cs  SendCommand.cs  Sender.cs  SerialSettings.cs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/CommandMessengerTests/: CommandMessengerTest.cs  CommandMessengerTests.csproj  Common.cs  Enumerator.cs  Program.cs  systemSettings.cs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/DataLogging/: DataLogging.cs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/Receive/: Receive.cs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/SendAndReceive/: SendAndReceive.cs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/SendAndReceiveArguments/: SendAndReceiveArguments.cs
robotican_hardware/ric_mc/Arduino/libraries/CmdMessenger/CSharp/SendAndReceiveBinaryArguments/: SendAndReceiveBinaryArguments.cs
robotican_hardware/ric_mc/Arduino/libraries/FastRunningMedian/: FastRunningMedian.h  keywords.txt  keywords.txt~
robotican_hardware/ric_mc/Arduino/libraries/I2CDev/: I2Cdev.h~
robotican_hardware/ric_mc/Arduino/libraries/MPU9150Lib/: MPU9150Lib.h
robotican_hardware/ric_mc/Arduino/libraries/MotionDriver/: inv_mpu.h
robotican_hardware/ric_mc/Arduino/libraries/PID_v1/: PID_v1.cpp  PID_v1.cpp~
robotican_hardware/ric_mc/Arduino/libraries/Sabertooth/: Sabertooth.h
robotican_hardware/ric_mc/Arduino/libraries/SabertoothSimplified/: SabertoothSimplified.h
robotican_hardware/ric_mc/Arduino/libraries/SyRenSimplified/: SyRenSimplified.h
robotican_hardware/ric_mc/Arduino/libraries/TeensyReceiver/: TeensyReceiver.h  TeensyReceiver.h~  TeensyReceiver_yam.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/: ArduinoHardware.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/dynamixel_controllers/: RestartController.h  SetComplianceMargin.h  SetCompliancePunch.h  SetComplianceSlope.h  SetSpeed.h  SetTorqueLimit.h  StartController.h  StopController.h  TorqueEnable.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/dynamixel_msgs/: JointState.h  MotorState.h  MotorStateList.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/komodo_batteries_monitor/: batteries_monitor.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/komodo_rover/: Encoders.h  StampedEncoders.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/komodo_sensors/: apm_adc.h  apm_gps.h  apm_imu.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/lizi/: imu_calib.h  lizi_command.h  lizi_gps.h  lizi_pan_tilt.h  lizi_raw.h  lizi_status.h  set_odom.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/manipulation_msgs/: Grasp.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/moveit_msgs/: AttachedCollisionObject.h  ContactInformation.h  GetCartesianPath.h  Grasp.h  JointConstraint.h  JointLimits.h  LinkPadding.h  LinkScale.h  MotionPlanDetailedResponse.h  MotionPlanRequest.h  MotionPlanResponse.h  OrientationConstraint.h  PickupGoal.h  PlaceGoal.h  PositionConstraint.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/octomap_msgs/: Octomap.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/pr2_controllers_msgs/: JointTrajectoryControllerState.h  PointHeadGoal.h  QueryTrajectoryState.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/pr2_mechanism_msgs/: ActuatorStatistics.h  ControllerStatistics.h  JointStatistics.h  ListControllerTypes.h  ListControllers.h  LoadController.h  SwitchController.h  SwitchControllerGoal.h  UnloadController.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/ric_robot/: home_elevator.h  relays.h  ric_calib.h  ric_command.h  ric_elevator_command.h  ric_gps.h  ric_pan_tilt.h  ric_raw.h  ric_rc.h  ric_status.h  set_elevator.h  set_odom.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/rtabmap/: Bytes.h  GetMap.h  Info.h  InfoEx.h  KeyPoint.h  MapData.h
robotican_hardware/ric_mc/Arduino/libraries/ros_lib/wiimote/: State.h
robotican_hardware/ric_mc/Arduino/ric_controller/: DRIVER.ino  RX.ino  ric_controller.ino
robotican_hardware/ric_mc/Arduino/ric_sensors/: DRIVER.ino  GPS.ino  IMU.ino  Komodo_elevator.ino  Pan_Tilt.ino  URF.ino  ric_sensors.ino
(+839 files in other folders)
